# sindarin

./: .gitignore  ARRAY.md  BENCHMARKS.md  BUILDING_WINDOWS.md  CLAUDE.md  CMakeLists.txt  DATE.md  DOCS.md  Dockerfile  EXPLORE.md  IMPLEMENTATION_PLAN.md  INTEROP.md  IO.md  ISSUES.md  MEMORY.md  Makefile  OPTIMIZATIONS.md  OPTIMIZATIONS_BENCHMARK.md  README.md  REFACTOR-TESTS.md  REFACTOR.md  RUNTIME.md  UX.md  build.bat  claude  expected_output.c  setup.bat  sindarin.sln  test.bat  test_output.c  vcpkg.json
.claude-looper/: configuration.json  default-workflow.json
.claude-looper/history/: manifest.json
.claude-runner/: session_mjb9wvbz_d5eb99f50f36.json  session_mjb9x2jx_d5eb99f50f36.json  session_mjba77zi_d5eb99f50f36.json  session_mjbah3sd_d5eb99f50f36.json  session_mjbwpp6s_44ba12c516f3.json  session_mjbxrbdy_bc4feb66d092.json
.claude-runner/checkpoints/: cp_mjb9wvw9.json  cp_mjb9xfox.json  cp_mjba7hpu.json  cp_mjbahbsc.json  cp_mjbwpx47.json  cp_mjbxrlzv.json
.github/workflows/: ci.yml  linux.yml  macos.yml  release.yml  windows.yml
benchmark/: run_all.sh
benchmark/csharp/: build.sh
benchmark/rust/: build.sh
benchmark/sindarin/: arrays.sn  build.sh  fib.sn  primes.sn  strings.sn
cmake/: RuntimeObjects.cmake
compiler/: Makefile  ast.c  ast.h  ast_expr.c  ast_expr.h  ast_print.c  ast_stmt.c  ast_stmt.h  ast_type.c  code_gen.c  code_gen.h  code_gen_expr.c  code_gen_expr.h  code_gen_expr_array.c  code_gen_expr_call_array.c  code_gen_expr_call_file.c  code_gen_expr_call_string.c  code_gen_expr_call_time.c  code_gen_expr_lambda.c  code_gen_expr_static.c  code_gen_expr_string.c  code_gen_stmt.c  code_gen_stmt.h  code_gen_util.c  code_gen_util.h  compiler.c  compiler.h  gcc_backend.c  lexer.c  lexer.h  lexer_scan.c  lexer_util.c  main.c  optimizer.c  optimizer.h  optimizer_string.c  optimizer_tail_call.c  optimizer_util.c  parser.c  parser.h  (+22 more)
compiler/ast/: ast_expr.c  ast_expr.h  ast_stmt.c
compiler/code_gen/: code_gen_expr.c  code_gen_expr_call.h  code_gen_expr_call_array.c  code_gen_expr_call_file.c  code_gen_expr_call_time.c  code_gen_expr_lambda.c  code_gen_expr_static.h
compiler/lexer/: lexer_scan.c  lexer_scan.h  lexer_util.c
compiler/optimizer/: optimizer_util.c
compiler/parser/: parser_stmt.h
compiler/runtime/: runtime_arena.h  runtime_array.h  runtime_byte.c  runtime_byte.h  runtime_io.h  runtime_path.c  runtime_path.h  runtime_time.c  runtime_time.h
compiler/tests/: _all_.c  arena_tests.c  ast_tests.c  ast_tests_expr.c  ast_tests_stmt.c  ast_tests_type.c  ast_tests_util.c  code_gen_tests.c  code_gen_tests_array.c  code_gen_tests_constfold.c  code_gen_tests_expr.c  code_gen_tests_memory.c  code_gen_tests_optimization.c  code_gen_tests_stmt.c  code_gen_tests_util.c  file_tests.c  lexer_tests.c  lexer_tests_array.c  lexer_tests_indent.c  lexer_tests_literal.c  lexer_tests_operator.c  optimizer_tests.c  parser_tests.c  parser_tests_array.c  parser_tests_control.c  parser_tests_lambda.c  parser_tests_memory.c  parser_tests_static.c  runtime_arena_tests.c  symbol_table_tests.c  test_utils.h  token_tests.c  type_checker_tests.c  type_checker_tests_array.c  type_checker_tests_errors.c  type_checker_tests_func.c  type_checker_tests_member.c  type_checker_tests_memory.c  type_checker_tests_promotion.c
compiler/type_checker/: type_checker_expr.c  type_checker_expr_call.c  type_checker_expr_lambda.c  type_checker_stmt.c  type_checker_util.c
docs/: ARRAYS.md  FILE_IO.md  MEMORY.md  README.md  type_checker_error_audit.md
docs/design/: INTERCEPTORS.md
docs/drafts/: DATE.md  ENVIRONMENT.md  FORMATTING.md  FORMAT_SPECIFIERS.md  INTEROP-V2.md  INTEROP.md  INTEROP_V3.md  LARGEFILES.md  NAMESPACES.md  NETWORK_IO.md  PROCESSES.md  RANDOM.md  STREAMING.md  STRUCTS.md  STRUCTS_V2.md  THREADING.md  UUID.md
docs/internal/: AS_VAL_CODE_GEN.md  INTERCEPTOR.md  ISSUES.md  OPTIMIZATIONS.md  OPTIMIZATIONS_REPORT.md  SHA1_IMPLEMENTATION.md  TESTING.md  string_interpolation_analysis.md
etc/: sn-clang.cfg  sn-gcc.cfg  sn-msvc.cfg  sn-tcc.cfg  sn.cfg  sn.clang.cfg  sn.gcc.cfg  sn.tcc.cfg
memory-analysis/: 01_primitives_vs_references.c  01_primitives_vs_references.sn  02_as_ref_heap_primitives.c  02_as_ref_heap_primitives.sn  03_clone_and_as_val.c  03_clone_and_as_val.sn  04_function_params_reference.c  04_function_params_reference.sn  05_function_params_as_val.c  05_function_params_as_val.sn  06_loop_arena_default.c  06_loop_arena_default.sn  07_shared_loop.c  07_shared_loop.sn  08_shared_function.c  08_shared_function.sn  09_shared_block.c  09_shared_block.sn  10_private_block.c  10_private_block.sn  11_private_function.c  11_private_function.sn  12_complex_shared_nested.c  12_complex_shared_nested.sn  13_shared_function_with_loop.c  13_shared_function_with_loop.sn  14_as_val_with_clone.c  14_as_val_with_clone.sn
samples/: main.c  main.library.sn  main.sn
scripts/: assembly  build  explore.sh  measure-optimization  prompt.sh  prompt.short.template  run  run.sh  run_integration_test.ps1  run_tests.py  run_tests.sh  test  test-explore  test-explore.sh  test-integration  test-integration.sh  test_threading.sh
sdk/: compression.sn  date.sn  date.sn.c  env.sn  math.sn  process.sn  random.sn  time.sn  uuid.sn  uuid.sn.c
src/: Makefile  ast.h  code_gen.c  code_gen.h  compiler.c  compiler.h  diagnostic.c  diagnostic.h  gcc_backend.c  gcc_backend.h  lexer.c  lexer.h  main.c  optimizer.c  parser.c  parser.h  runtime.c  runtime.h  symbol_table.c  symbol_table.h  token.c  token.h
testing/: FILE_IO_VARIANCE_GAPS.md  ISSUES.md  TEST_PLAN.md  analyze_results.sh  run_tests.sh  test_07_arrays_methods.sn  test_15_nested_loops.sn  test_18_private_shared.sn  test_19_edge_cases.sn  test_20_operator_combos.sn  test_23_scope_shadowing.sn  test_24_complex_expressions.sn  test_25_boundary_values.sn  test_33_string_basic.sn  test_56_deep_nesting.sn  test_70_textfile_static.sn  test_71_textfile_reading.sn  test_72_textfile_writing.sn  test_73_textfile_state.sn  test_76_binaryfile_readwrite.sn  test_77_binaryfile_state.sn  test_78_byte_type.sn  test_results.txt
(+427 files in other folders)
